Fixed spacing in Teaching table

--- a/src/components/Teaching/Teaching.module.scss
+++ b/src/components/Teaching/Teaching.module.scss
@@ -4,21 +4,20 @@
     table {
         width: 400px;
 
-        td {
-            display: inline-block;
-            padding-left: 0;
-            padding-right: 0;
-            text-align: left;
-        }
+        tr {
+            td {
+                display: inline-block;
+                padding: lengths.$small 0;
+                text-align: left;
+            }
 
-        td:nth-of-type(1) {
-            width: 15%;
-            padding: lengths.$small 0;
-        }
+            td:nth-of-type(1) {
+                width: 15%;
+            }
 
-        td:nth-of-type(2) {
-            width: 20%;
-            padding: lengths.$small 0;
+            td:nth-of-type(2) {
+                width: 20%;
+            }
         }
     }
 }
